CVS HEAD:
 * language and i18n:
   * updated translations:
     * British English, Catalan, Chinese, Dutch, German, Swedish
   * fixed help description of income and upkeep (#13565)
   * updated several unit descriptions
   * document that Woses receive no traits (#13630)
 * unit balancing and modifications:
   * max level units given After-Max-Level-Advancement (AMLA) of 3 HP/100XP
     with no auto-heal; Necrophage has healing AMLA with no bonus HP
   * changed Naga Warrior attack from 5-5 to 7-4
   * removed obsolete units Mounted Captain, Mounted Commander
 * graphics and sound improvements:
   * new or revised images for Dark Sorcerer, Dwarvish Thunderguard, Necromancer
   * new death animations: Elvish Sharpshooter, Elvish Marksman
 * WML improvements:
   * #define's in user campaigns are now local to each campaign (patch 4138)
   * preprocess files that do not end with a final newline correctly
 * campaigns
   * Heir to the Throne:
     * made campaign easier on "Easy" level
   * Eastern Invasion:
     * revised Approaching Weldyn for quicker gameplay
 * server now supports redirection based on client version number
 * editor
   * changed the layout of the terrain palette (#11965)
   * relocated and enlarged the buttons (#11967)
   * maps can't be saved with illegal characters (#10704)

Version 0.9.3:
 * user interface improvements:
   * restored dialog titles for multiplayer screens (#13049)
   * --nosound commandline option no longer initializes sound (part of #11669)
   * players can now control multiple sides in multiplayer
   * prevented user campaigns with errors from making the game unstartable
   * user campaigns can no longer redefine standard units
   * multiplayer replays no longer show 'The End' and credits (part of #13375)
   * fixed off-by-one error in Unit List (#13323)
   * fixed multiple Returns registered by some dialogs (part of #13332)
   * "Observers" setting for multiplayer games is now obeyed again (#13374)
 * language and i18n: